src/objects/Adventure__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <fields>
        <fullName>Attempts__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Attempts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Class_Name__c</fullName>
        <label>Class Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_Quest__c</fullName>
        <label>Current Question</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>In_Play__c</fullName>
        <defaultValue>false</defaultValue>
        <label>In Play</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_File_Based__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is File Based</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Started__c</fullName>
        <label>Last Started</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Time_Spent__c</fullName>
        <defaultValue>0</defaultValue>
        <description>In seconds</description>
        <label>Time Spent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Update_Chatter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Update Chatter</label>
        <type>Checkbox</type>
    </fields>
    <label>Adventure</label>
</CustomObject>